# tsumaki

./: .gitignore  .gitmodules  generate_protobuf.sh
tsumaki-core/: MANIFEST.in  Pipfile  package.ps1  package.sh  setup.py
tsumaki-core/tests/: conftest.py  test_api.py  test_ipc.py
tsumaki-core/tsumaki/: __init__.py  __main__.py  api.py  cli.py  device_setup.py  image_utils.py  ipc.py  transport.py
tsumaki-core/tsumaki/model_branch/incubator/: mobilenetv2.py  xception.py
tsumaki-core/tsumaki/model_zoo/deeplabv3plus/: LICENSE  model.py
tsumaki-core/tsumaki/tsumaki_protobuf/: DetectPerson_pb2.py  ErrorResponse_pb2.py  Heartbeat_pb2.py  MaskImage_pb2.py  RGBAImage_pb2.py  SetupDevice_pb2.py
tsumaki-core/tsumaki_protobuf/: DetectPerson_pb2.py  Heartbeat_pb2.py
tsumaki-obs/: CMakeLists.txt  frame.cpp  frame.hpp  glue.cpp  glue.hpp  image-cvt.cpp  image-cvt.hpp  ipc-connection.cpp  ipc-connection.hpp  ipc-error.hpp  ipc-frame.cpp  ipc-frame.hpp  ipc-spec.cpp  ipc-spec.hpp  ipc.cpp  ipc.hpp  obs-filter.cpp  obs-filter.hpp  platform-def.hpp  thread-util.hpp  tsumaki-api-thread.cpp  tsumaki-api-thread.hpp  tsumaki-filter.cpp  tsumaki-filter.hpp  tsumaki-math.cpp  tsumaki-math.hpp  tsumaki-plugin.cpp
tsumaki-obs/ipc_platforms/: unix.cpp  unix.hpp  win32.cpp  win32.hpp
tsumaki-obs/protobuf/: DetectPerson.pb.cc  DetectPerson.pb.h  ErrorResponse.pb.cc  ErrorResponse.pb.h  Heartbeat.pb.cc  Heartbeat.pb.h  MaskImage.pb.cc  MaskImage.pb.h  RGBAImage.pb.cc  RGBAImage.pb.h  SetupDevice.pb.cc  SetupDevice.pb.h
tsumaki-protobuf/: DetectPerson.proto  ErrorResponse.proto  FRAME_STRUCTURE.txt  Heartbeat.proto  MaskImage.proto  RGBAImage.proto  SetupDevice.proto
